@@ -10,6 +10,8 @@ Post-v2.16.0
        limiting behavior.
      * Add hardware offload support for matching IPv4/IPv6 frag types
        (experimental).
+     * Forbid use of DPDK multiprocess feature.
+     * Add support for running threads on cores > RTE_MAX_LCORE.
 
 
 v2.16.0 - 16 Aug 2021
